--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="background">
-        <div class="logo-banner">ODIN</div>
+        <div class="logo-banner">
+            <img src="odin-lined.png" alt="odin logo">
+            <div>ODIN</div>
+        </div>
         <p class="photo-credit">Photo by <a class="photo-credit" href="https://unsplash.com/@haliewestphoto">Hailie West</a></p>
     </div>
     <div class="content">
@@ -27,35 +31,41 @@
         <div class="form">
             <div class="form-box">
 
-            <form action="" method="get">
+            <form action="" method="get" novalidate>
                 <div class="input-align">
                     <div class="label-align">
                         <label for="first_name">FIRST NAME</label>
-                        <input type="text" id="first_name" name="first_name">
+                        <input type="text" id="first_name" name="first_name" required>
+                        <span class="error" aria-live="polite"></span>
                     </div>
                     <div class="label-align">
                         <label for="last_name">LAST NAME</label>
-                        <input type="text" id="last_name" name="last_name">
+                        <input type="text" id="last_name" name="last_name" required>
+                        <span class="error" aria-live="polite"></span>
                     </div>
                 </div>
                 <div class="input-align">
                     <div class="label-align">
                         <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email">
+                        <input type="email" id="email" name="email" required>
+                        <span class="error" aria-live="polite"></span>
                     </div>
                     <div class="label-align">
-                        <label for="phone_number"> PHONE NUMBER</label>
-                        <input type="number" id="phone_number" name="phone_number">
+                        <label for="phone_number">PHONE NUMBER</label>
+                        <input type="text" id="phone_number" name="phone_number" required>
+                        <span class="error" aria-live="polite"></span>
                     </div>
                 </div>
                 <div class="input-align">
                     <div class="label-align">
                         <label for="password">PASSWORD</label>
-                        <input type="password" id="password" name="password">
+                        <input type="password" id="password" name="password" minlength="8" maxlength="20" required>
+                        <span class="error" aria-live="polite"></span>
                     </div>
                     <div class="label-align">
                         <label for="confirm_password">CONFIRM PASSWORD</label>
-                        <input type="password" id="confirm_password" name="confirm_password"> 
+                        <input type="password" id="confirm_password" name="confirm_password" required> 
+                        <span class="error" aria-live="polite"></span>
                     </div>
                 </div>
             </div>
