--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                 <div class="input-align">
                     <div class="label-align">
                         <label for="first_name">FIRST NAME</label>
-                        <input type="text" id="first_name" name="first_name" placeholder="Dan" required>
+                        <input type="text" id="first_name" name="first_name" required>
                         <span class="error" aria-live="polite"></span>
                     </div>
                     <div class="label-align">
                         <label for="last_name">LAST NAME</label>
-                        <input type="text" id="last_name" name="last_name" placeholder="Goldburger" required>
+                        <input type="text" id="last_name" name="last_name" required>
                         <span class="error" aria-live="polite"></span>
                     </div>
                 </div>
                 <div class="input-align">
                     <div class="label-align">
                         <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email" placeholder="dangoldburger@goldsburgers.com" required>
+                        <input type="email" id="email" name="email" required>
                         <span class="error" aria-live="polite"></span>
                     </div>
                     <div class="label-align">
